--- a/HTML CSS JS/druzynowe_mistrzostwa.html
+++ b/HTML CSS JS/druzynowe_mistrzostwa.html
@@ -3,21 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drużynowe Mistrzostwa Polski - STARTER WSPA</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Drużynowe Mistrzostwa Polski 2024</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center; /* Wyśrodkowanie tekstu */
+            background-color: #f0f8ff; /* Jasnoniebieskie tło */
+            color: #333;
+        }
+        .container {
+            margin: 0 auto;
+            max-width: 600px; /* Maksymalna szerokość kontenera */
+            padding: 20px;
+            background: white; /* Białe tło kontenera */
+            border-radius: 8px; /* Zaokrąglone rogi kontenera */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Cień kontenera */
+        }
+        table {
+            margin: 20px auto; /* Wyśrodkowanie tabeli */
+            border-collapse: collapse; /* Usunięcie przerw między komórkami */
+            width: 100%; /* Szerokość tabeli */
+        }
+        th, td {
+            border: 1px solid #00796b; /* Zielony kolor obramowania */
+            padding: 8px; /* Padding wewnętrzny komórek */
+            text-align: center; /* Wyśrodkowanie tekstu w komórkach */
+        }
+        th {
+            background-color: #00796b; /* Zielone tło dla nagłówków */
+            color: white; /* Biały kolor tekstu w nagłówkach */
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em; /* Mniejsza czcionka dla stopki */
+        }
+        /* Styl dla przycisku */
+        .btn {
+            display: inline-block; /* Wyświetlenie przycisku jako blok */
+            padding: 10px 15px; /* Padding przycisku */
+            margin-top: 20px; /* Odstęp nad przyciskiem */
+            background-color: #00796b; /* Kolor tła przycisku */
+            color: white; /* Kolor tekstu przycisku */
+            border: none; /* Bez obramowania */
+            border-radius: 5px; /* Zaokrąglone rogi przycisku */
+            text-decoration: none; /* Bez podkreślenia */
+            font-size: 16px; /* Rozmiar czcionki */
+        }
+        .btn:hover {
+            background-color: #005f57; /* Ciemniejszy kolor tła przy najechaniu */
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
     <header>
-        <h1>Drużynowe Mistrzostwa Polski</h1>
+        <h1>Drużynowe Mistrzostwa Polski 2024</h1>
+        <p>Witamy na stronie Drużynowych Mistrzostw Polski!</p>
     </header>
+
     <section>
-        <p>Informacje o drużynowych mistrzostwach Polski w lekkiej atletyce.</p>
-        <!-- Dodaj więcej treści tutaj -->
+        <h2>Wydarzenia Drużynowe</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Sport</th>
+                    <th>Miejsce</th>
+                    <th>Data</th>
+                    <th>Godzina</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Piłka nożna</td>
+                    <td>Stadion, Warszawa</td>
+                    <td>15 marca</td>
+                    <td>15:00</td>
+                </tr>
+                <tr>
+                    <td>Koszykówka</td>
+                    <td>Hala Sportowa, Gdańsk</td>
+                    <td>16 marca</td>
+                    <td>17:00</td>
+                </tr>
+                <tr>
+                    <td>Siatkówka</td>
+                    <td>Hala Sportowa, Wrocław</td>
+                    <td>17 marca</td>
+                    <td>18:30</td>
+                </tr>
+                <tr>
+                    <td>Badminton</td>
+                    <td>Hala Sportowa, Lublin</td>
+                    <td>18 marca</td>
+                    <td>14:00</td>
+                </tr>
+                <tr>
+                    <td>E-sport FIFA</td>
+                    <td>Centrum E-sportowe, Łódź</td>
+                    <td>19 marca</td>
+                    <td>13:00</td>
+                </tr>
+                <tr>
+                    <td>Boks</td>
+                    <td>Stadion, Kraków</td>
+                    <td>20 marca</td>
+                    <td>19:00</td>
+                </tr>
+                <tr>
+                    <td>Szachy</td>
+                    <td>Dom Kultury, Białystok</td>
+                    <td>21 marca</td>
+                    <td>10:00</td>
+                </tr>
+                <tr>
+                    <td>Zapasy</td>
+                    <td>Hala Sportowa, Katowice</td>
+                    <td>22 marca</td>
+                    <td>12:30</td>
+                </tr>
+                <tr>
+                    <td>Łyżwiarstwo figurowe</td>
+                    <td>Zimowy Ośrodek Sportowy, Zakopane</td>
+                    <td>23 marca</td>
+                    <td>16:00</td>
+                </tr>
+                <tr>
+                    <td>Wspinaczka</td>
+                    <td>Ścianka Wspinaczkowa, Gdynia</td>
+                    <td>24 marca</td>
+                    <td>11:00</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
+    
+    <a href="logowanie.html" class="btn">Powrót do logowania</a> <!-- Przycisk powrotu -->
+
     <footer>
-        <p>&#169; 2021-2024 STARTER WSPA</p>
+        <p>&copy; STARTER SPORTOWY. Wszystkie prawa zastrzeżone.</p>
     </footer>
 </div>
 
