--- a/HTML CSS JS/mistrzostwa.html
+++ b/HTML CSS JS/mistrzostwa.html
@@ -3,21 +3,205 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mistrzostwa Polski - STARTER WSPA</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Mistrzostwa Polski 2024</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center; /* Wyśrodkowanie tekstu w całym ciele */
+            background-color: #e0f7fa; /* Jasnoniebieskie tło */
+            color: #333;
+        }
+        .container {
+            margin: 0 auto;
+            max-width: 800px; /* Maksymalna szerokość kontenera */
+            padding: 20px;
+            background: white; /* Białe tło kontenera */
+            border-radius: 8px; /* Zaokrąglone rogi kontenera */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Cień kontenera */
+        }
+        table {
+            margin: 20px auto; /* Wyśrodkowanie tabeli */
+            border-collapse: collapse; /* Usunięcie przerw między komórkami */
+            width: 100%; /* Szerokość tabeli */
+        }
+        th, td {
+            border: 1px solid #00796b; /* Zielony kolor obramowania */
+            padding: 10px; /* Padding wewnętrzny komórek */
+            text-align: center; /* Wyśrodkowanie tekstu w komórkach */
+        }
+        th {
+            background-color: #00796b; /* Zielone tło dla nagłówków */
+            color: white; /* Biały kolor tekstu w nagłówkach */
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em; /* Mniejsza czcionka dla stopki */
+        }
+        /* Styl dla przycisku */
+        .btn {
+            display: inline-block; /* Wyświetlenie przycisku jako blok */
+            padding: 10px 20px; /* Padding przycisku */
+            margin-top: 20px; /* Odstęp nad przyciskiem */
+            background-color: #00796b; /* Kolor tła przycisku */
+            color: white; /* Kolor tekstu przycisku */
+            border: none; /* Bez obramowania */
+            border-radius: 5px; /* Zaokrąglone rogi przycisku */
+            text-decoration: none; /* Bez podkreślenia */
+            font-size: 16px; /* Rozmiar czcionki */
+        }
+        .btn:hover {
+            background-color: #005f57; /* Ciemniejszy kolor tła przy najechaniu */
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
     <header>
-        <h1>Mistrzostwa Polski</h1>
+        <h1>Mistrzostwa Polski 2024</h1>
+        <p>Zapraszamy do uczestnictwa w naszych zawodach!</p>
     </header>
+
     <section>
-        <p>Informacje o Mistrzostwach Polski w lekkiej atletyce.</p>
-        <!-- Dodaj więcej treści tutaj -->
+        <h2>Wydarzenia Sportowe</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Sport</th>
+                    <th>Miejsce</th>
+                    <th>Data</th>
+                    <th>Godzina</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Bieg na 100 m</td>
+                    <td>Stadion, Warszawa</td>
+                    <td>5 czerwca</td>
+                    <td>10:00</td>
+                </tr>
+                <tr>
+                    <td>Skok wzwyż</td>
+                    <td>Stadion, Łódź</td>
+                    <td>6 czerwca</td>
+                    <td>11:30</td>
+                </tr>
+                <tr>
+                    <td>Rzut piłką</td>
+                    <td>Stadion, Gdańsk</td>
+                    <td>7 czerwca</td>
+                    <td>13:00</td>
+                </tr>
+                <tr>
+                    <td>Szachy</td>
+                    <td>Dom Kultury, Białystok</td>
+                    <td>8 czerwca</td>
+                    <td>09:00</td>
+                </tr>
+                <tr>
+                    <td>Badminton</td>
+                    <td>Hala Sportowa, Lublin</td>
+                    <td>9 czerwca</td>
+                    <td>11:00</td>
+                </tr>
+                <tr>
+                    <td>Koszykówka</td>
+                    <td>Hala Sportowa, Kraków</td>
+                    <td>10 czerwca</td>
+                    <td>14:00</td>
+                </tr>
+                <tr>
+                    <td>Boks</td>
+                    <td>Hala Sportowa, Szczecin</td>
+                    <td>11 czerwca</td>
+                    <td>16:00</td>
+                </tr>
+                <tr>
+                    <td>Piłka nożna</td>
+                    <td>Stadion, Zielona Góra</td>
+                    <td>12 czerwca</td>
+                    <td>18:00</td>
+                </tr>
+                <tr>
+                    <td>Siatkówka</td>
+                    <td>Hala Sportowa, Nowy Sącz</td>
+                    <td>13 czerwca</td>
+                    <td>15:00</td>
+                </tr>
+                <tr>
+                    <td>Łyżwiarstwo figurowe</td>
+                    <td>Zimowy Ośrodek Sportowy, Zakopane</td>
+                    <td>14 czerwca</td>
+                    <td>17:30</td>
+                </tr>
+                <tr>
+                    <td>Wspinaczka</td>
+                    <td>Ścianka Wspinaczkowa, Gdynia</td>
+                    <td>15 czerwca</td>
+                    <td>12:00</td>
+                </tr>
+                <tr>
+                    <td>Bilard</td>
+                    <td>Klub Bilardowy, Gdańsk</td>
+                    <td>16 czerwca</td>
+                    <td>14:30</td>
+                </tr>
+                <tr>
+                    <td>E-sport FIFA</td>
+                    <td>Centrum E-sportowe, Łódź</td>
+                    <td>17 czerwca</td>
+                    <td>13:00</td>
+                </tr>
+                <tr>
+                    <td>Zapasy</td>
+                    <td>Hala Sportowa, Wrocław</td>
+                    <td>18 czerwca</td>
+                    <td>10:30</td>
+                </tr>
+                <tr>
+                    <td>Rugby</td>
+                    <td>Stadion, Kraków</td>
+                    <td>19 czerwca</td>
+                    <td>16:00</td>
+                </tr>
+                <tr>
+                    <td>Taniec towarzyski</td>
+                    <td>Dom Kultury, Poznań</td>
+                    <td>20 czerwca</td>
+                    <td>18:00</td>
+                </tr>
+                <tr>
+                    <td>Golf</td>
+                    <td>Pole Golfowe, Warszawa</td>
+                    <td>21 czerwca</td>
+                    <td>09:00</td>
+                </tr>
+                <tr>
+                    <td>Pływanie</td>
+                    <td>Basen, Łódź</td>
+                    <td>22 czerwca</td>
+                    <td>11:00</td>
+                </tr>
+                <tr>
+                    <td>Hokej na lodzie</td>
+                    <td>Hala Lodowa, Katowice</td>
+                    <td>23 czerwca</td>
+                    <td>13:00</td>
+                </tr>
+                <tr>
+                    <td>Wioślarstwo</td>
+                    <td>Przystań, Wrocław</td>
+                    <td>24 czerwca</td>
+                    <td>15:30</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
+    
+    <a href="logowanie.html" class="btn">Powrót do logowania</a> <!-- Przycisk powrotu -->
+
     <footer>
-        <p>&#169; 2021-2024 STARTER WSPA</p>
+        <p>&copy; 2024 STARTER SPORTOWY. Wszystkie prawa zastrzeżone.</p>
     </footer>
 </div>
 
