--- a/HTML CSS JS/klasa_druga.html
+++ b/HTML CSS JS/klasa_druga.html
@@ -67,6 +67,7 @@
         <table>
             <thead>
                 <tr>
+                    <th>ID</th> <!-- Kolumna ID -->
                     <th>Sport</th>
                     <th>Miejsce</th>
                     <th>Data</th>
@@ -75,60 +76,70 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>1</td> <!-- ID dla tego wiersza -->
                     <td>Bieg na 100 m</td>
                     <td>Stadion, Warszawa</td>
                     <td>5 kwietnia</td>
                     <td>10:00</td>
                 </tr>
                 <tr>
+                    <td>2</td> <!-- ID dla tego wiersza -->
                     <td>Rzut piłką</td>
                     <td>Stadion, Łódź</td>
                     <td>6 kwietnia</td>
                     <td>11:30</td>
                 </tr>
                 <tr>
+                    <td>3</td> <!-- ID dla tego wiersza -->
                     <td>Szachy</td>
                     <td>Dom Kultury, Białystok</td>
                     <td>7 kwietnia</td>
                     <td>09:00</td>
                 </tr>
                 <tr>
+                    <td>4</td> <!-- ID dla tego wiersza -->
                     <td>Badminton</td>
                     <td>Hala Sportowa, Lublin</td>
                     <td>8 kwietnia</td>
                     <td>11:00</td>
                 </tr>
                 <tr>
+                    <td>5</td> <!-- ID dla tego wiersza -->
                     <td>Koszykówka</td>
                     <td>Hala Sportowa, Gdańsk</td>
                     <td>9 kwietnia</td>
                     <td>14:00</td>
                 </tr>
                 <tr>
+                    <td>6</td> <!-- ID dla tego wiersza -->
                     <td>Piłka nożna</td>
                     <td>Stadion, Kraków</td>
                     <td>10 kwietnia</td>
                     <td>18:00</td>
                 </tr>
                 <tr>
+                    <td>7</td> <!-- ID dla tego wiersza -->
                     <td>Wspinaczka</td>
                     <td>Ścianka Wspinaczkowa, Gdynia</td>
                     <td>11 kwietnia</td>
                     <td>12:00</td>
                 </tr>
                 <tr>
+                    <td>8</td> <!-- ID dla tego wiersza -->
                     <td>Łyżwiarstwo figurowe</td>
                     <td>Zimowy Ośrodek Sportowy, Zakopane</td>
                     <td>12 kwietnia</td>
                     <td>17:30</td>
                 </tr>
                 <tr>
+                    <td>9</td> <!-- ID dla tego wiersza -->
                     <td>Zapasy</td>
                     <td>Hala Sportowa, Wrocław</td>
                     <td>13 kwietnia</td>
                     <td>10:30</td>
                 </tr>
                 <tr>
+                    <td>10</td> <!-- ID dla tego wiersza -->
                     <td>E-sport FIFA</td>
                     <td>Centrum E-sportowe, Łódź</td>
                     <td>14 kwietnia</td>
