--- a/HTML CSS JS/mistrzostwa.html
+++ b/HTML CSS JS/mistrzostwa.html
@@ -67,6 +67,7 @@
         <table>
             <thead>
                 <tr>
+                    <th>ID</th> <!-- Kolumna ID -->
                     <th>Sport</th>
                     <th>Miejsce</th>
                     <th>Data</th>
@@ -75,120 +76,140 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>1</td> <!-- ID dla tego wiersza -->
                     <td>Bieg na 100 m</td>
                     <td>Stadion, Warszawa</td>
                     <td>5 czerwca</td>
                     <td>10:00</td>
                 </tr>
                 <tr>
+                    <td>2</td> <!-- ID dla tego wiersza -->
                     <td>Skok wzwyż</td>
                     <td>Stadion, Łódź</td>
                     <td>6 czerwca</td>
                     <td>11:30</td>
                 </tr>
                 <tr>
+                    <td>3</td> <!-- ID dla tego wiersza -->
                     <td>Rzut piłką</td>
                     <td>Stadion, Gdańsk</td>
                     <td>7 czerwca</td>
                     <td>13:00</td>
                 </tr>
                 <tr>
+                    <td>4</td> <!-- ID dla tego wiersza -->
                     <td>Szachy</td>
                     <td>Dom Kultury, Białystok</td>
                     <td>8 czerwca</td>
                     <td>09:00</td>
                 </tr>
                 <tr>
+                    <td>5</td> <!-- ID dla tego wiersza -->
                     <td>Badminton</td>
                     <td>Hala Sportowa, Lublin</td>
                     <td>9 czerwca</td>
                     <td>11:00</td>
                 </tr>
                 <tr>
+                    <td>6</td> <!-- ID dla tego wiersza -->
                     <td>Koszykówka</td>
                     <td>Hala Sportowa, Kraków</td>
                     <td>10 czerwca</td>
                     <td>14:00</td>
                 </tr>
                 <tr>
+                    <td>7</td> <!-- ID dla tego wiersza -->
                     <td>Boks</td>
                     <td>Hala Sportowa, Szczecin</td>
                     <td>11 czerwca</td>
                     <td>16:00</td>
                 </tr>
                 <tr>
+                    <td>8</td> <!-- ID dla tego wiersza -->
                     <td>Piłka nożna</td>
                     <td>Stadion, Zielona Góra</td>
                     <td>12 czerwca</td>
                     <td>18:00</td>
                 </tr>
                 <tr>
+                    <td>9</td> <!-- ID dla tego wiersza -->
                     <td>Siatkówka</td>
                     <td>Hala Sportowa, Nowy Sącz</td>
                     <td>13 czerwca</td>
                     <td>15:00</td>
                 </tr>
                 <tr>
+                    <td>10</td> <!-- ID dla tego wiersza -->
                     <td>Łyżwiarstwo figurowe</td>
                     <td>Zimowy Ośrodek Sportowy, Zakopane</td>
                     <td>14 czerwca</td>
                     <td>17:30</td>
                 </tr>
                 <tr>
+                    <td>11</td> <!-- ID dla tego wiersza -->
                     <td>Wspinaczka</td>
                     <td>Ścianka Wspinaczkowa, Gdynia</td>
                     <td>15 czerwca</td>
                     <td>12:00</td>
                 </tr>
                 <tr>
+                    <td>12</td> <!-- ID dla tego wiersza -->
                     <td>Bilard</td>
                     <td>Klub Bilardowy, Gdańsk</td>
                     <td>16 czerwca</td>
                     <td>14:30</td>
                 </tr>
                 <tr>
+                    <td>13</td> <!-- ID dla tego wiersza -->
                     <td>E-sport FIFA</td>
                     <td>Centrum E-sportowe, Łódź</td>
                     <td>17 czerwca</td>
                     <td>13:00</td>
                 </tr>
                 <tr>
+                    <td>14</td> <!-- ID dla tego wiersza -->
                     <td>Zapasy</td>
                     <td>Hala Sportowa, Wrocław</td>
                     <td>18 czerwca</td>
                     <td>10:30</td>
                 </tr>
                 <tr>
+                    <td>15</td> <!-- ID dla tego wiersza -->
                     <td>Rugby</td>
                     <td>Stadion, Kraków</td>
                     <td>19 czerwca</td>
                     <td>16:00</td>
                 </tr>
                 <tr>
+                    <td>16</td> <!-- ID dla tego wiersza -->
                     <td>Taniec towarzyski</td>
                     <td>Dom Kultury, Poznań</td>
                     <td>20 czerwca</td>
                     <td>18:00</td>
                 </tr>
                 <tr>
+                    <td>17</td> <!-- ID dla tego wiersza -->
                     <td>Golf</td>
                     <td>Pole Golfowe, Warszawa</td>
                     <td>21 czerwca</td>
                     <td>09:00</td>
                 </tr>
                 <tr>
+                    <td>18</td> <!-- ID dla tego wiersza -->
                     <td>Pływanie</td>
                     <td>Basen, Łódź</td>
                     <td>22 czerwca</td>
                     <td>11:00</td>
                 </tr>
                 <tr>
+                    <td>19</td> <!-- ID dla tego wiersza -->
                     <td>Hokej na lodzie</td>
                     <td>Hala Lodowa, Katowice</td>
                     <td>23 czerwca</td>
                     <td>13:00</td>
                 </tr>
                 <tr>
+                    <td>20</td> <!-- ID dla tego wiersza -->
                     <td>Wioślarstwo</td>
                     <td>Przystań, Wrocław</td>
                     <td>24 czerwca</td>
