--- a/HTML CSS JS/admin.html
+++ b/HTML CSS JS/admin.html
@@ -16,18 +16,20 @@
             padding: 0;
         }
         .container {
-            width: 80%;
+            width: 60%;
             margin: auto;
             padding: 20px;
             background: #f9f9f9;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             margin-top: 50px;
+            text-align: center; /* Wyśrodkowanie zawartości */
         }
         .flag {
             width: 100%;
             height: 50px; /* Wysokość flagi */
             background: linear-gradient(to right, #ffffff 33.33%, #007bff 33.33% 66.66%, #ff0000 66.66%); /* Flaga w poziomie */
+            margin-bottom: 20px;
         }
         header {
             text-align: center;
@@ -44,36 +46,25 @@
         .admin-panel {
             margin-top: 20px;
         }
-        .event-select, .event-id {
-            margin-bottom: 10px;
-            width: calc(100% - 22px); /* Dostosowuje szerokość do przycisków */
-            padding: 10px;
-        }
         button {
             background-color: #007bff; /* Niebieski przycisk */
             color: white;
             border: none;
             cursor: pointer;
-            padding: 10px;
+            padding: 10px 20px;
             border-radius: 5px;
-            margin-right: 10px;
+            margin: 10px;
+            font-size: 1em;
+            width: 180px; /* Stała szerokość przycisków */
         }
         button:hover {
             background-color: #0056b3; /* Ciemniejszy niebieski */
-        }
-        .scroll-container {
-            max-height: 200px; /* Wysokość kontenera */
-            overflow-y: auto; /* Scroll w pionie */
-            border: 1px solid #007bff;
-            border-radius: 5px;
-            padding: 10px;
-            background-color: #fff;
-            margin-bottom: 20px;
         }
         footer {
             text-align: center;
             padding: 20px;
             font-size: 12px;
+            margin-top: 30px;
         }
     </style>
 </head>
@@ -92,25 +83,9 @@
 
     <!-- Panel administracyjny -->
     <div class="admin-panel">
-        <h3>Zarządzaj Wydarzeniami</h3>
-        <div class="scroll-container">
-            <label for="event-select">Wybierz wydarzenie:</label>
-            <select class="event-select" id="event-select">
-                <option value="mistrzostwa">Mistrzostwa Polski</option>
-                <option value="klasa_pierwsza">Klasa Pierwsza</option>
-                <option value="klasa_druga">Klasa Druga</option>
-                <option value="druzynowe">Drużynowe Mistrzostwa Polski</option>
-            </select>
-        </div>
-        <div>
-            <label for="event-id">Wprowadź ID wydarzenia:</label>
-            <input type="text" class="event-id" id="event-id" placeholder="Wprowadź ID wydarzenia" required>
-        </div>
-        <div>
-            <button id="add-event">Dodaj Wydarzenie</button>
-            <button id="remove-event">Usuń Wydarzenie</button>
-            <button id="logout">Wyloguj</button>
-        </div>
+        <button id="add-event">Dodaj Wydarzenie</button>
+        <button id="remove-event">Usuń Wydarzenie</button>
+        <button id="logout">Wyloguj</button>
     </div>
 
     <!-- stopka -->
@@ -123,24 +98,22 @@
 
 <script>
     $(document).ready(function() {
-        // Logika do dodawania i usuwania wydarzeń
+        // Po kliknięciu przycisku "Dodaj Wydarzenie" użytkownik zostaje przekierowany na stronę dodaj_wydarzenie.html
         $("#add-event").on("click", function() {
-            const eventName = $("#event-select").val();
-            const eventId = $("#event-id").val();
-            alert("Dodano wydarzenie: " + eventName + " z ID: " + eventId);
-            // Możesz dodać tutaj kod do dodawania wydarzenia do bazy danych
+            window.location.href = "dodaj_wydarzenie.html";
         });
 
+        // Po kliknięciu przycisku "Usuń Wydarzenie" użytkownik zostaje przekierowany na stronę usuwanie_wydarzenia.html
         $("#remove-event").on("click", function() {
-            const eventName = $("#event-select").val();
-            const eventId = $("#event-id").val();
-            alert("Usunięto wydarzenie: " + eventName + " z ID: " + eventId);
-            // Możesz dodać tutaj kod do usuwania wydarzenia z bazy danych
+            window.location.href = "usuwanie_wydarzenia.html";
         });
 
+        // Logika wylogowywania
         $("#logout").on("click", function() {
-            alert("Wylogowano.");
-            // Możesz dodać tutaj kod do wylogowywania z systemu
+            if (confirm("Czy na pewno chcesz się wylogować?")) {
+                // Po kliknięciu OK, przekierowanie na stronę logowania
+                window.location.href = "logowanie.html";
+            }
         });
     });
 </script>
