--- a/HTML CSS JS/druzynowe_mistrzostwa.html
+++ b/HTML CSS JS/druzynowe_mistrzostwa.html
@@ -67,6 +67,7 @@
         <table>
             <thead>
                 <tr>
+                    <th>ID</th> <!-- Kolumna ID -->
                     <th>Sport</th>
                     <th>Miejsce</th>
                     <th>Data</th>
@@ -75,60 +76,70 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>1</td> <!-- ID dla tego wiersza -->
                     <td>Piłka nożna</td>
                     <td>Stadion, Warszawa</td>
                     <td>15 marca</td>
                     <td>15:00</td>
                 </tr>
                 <tr>
+                    <td>2</td> <!-- ID dla tego wiersza -->
                     <td>Koszykówka</td>
                     <td>Hala Sportowa, Gdańsk</td>
                     <td>16 marca</td>
                     <td>17:00</td>
                 </tr>
                 <tr>
+                    <td>3</td> <!-- ID dla tego wiersza -->
                     <td>Siatkówka</td>
                     <td>Hala Sportowa, Wrocław</td>
                     <td>17 marca</td>
                     <td>18:30</td>
                 </tr>
                 <tr>
+                    <td>4</td> <!-- ID dla tego wiersza -->
                     <td>Badminton</td>
                     <td>Hala Sportowa, Lublin</td>
                     <td>18 marca</td>
                     <td>14:00</td>
                 </tr>
                 <tr>
+                    <td>5</td> <!-- ID dla tego wiersza -->
                     <td>E-sport FIFA</td>
                     <td>Centrum E-sportowe, Łódź</td>
                     <td>19 marca</td>
                     <td>13:00</td>
                 </tr>
                 <tr>
+                    <td>6</td> <!-- ID dla tego wiersza -->
                     <td>Boks</td>
                     <td>Stadion, Kraków</td>
                     <td>20 marca</td>
                     <td>19:00</td>
                 </tr>
                 <tr>
+                    <td>7</td> <!-- ID dla tego wiersza -->
                     <td>Szachy</td>
                     <td>Dom Kultury, Białystok</td>
                     <td>21 marca</td>
                     <td>10:00</td>
                 </tr>
                 <tr>
+                    <td>8</td> <!-- ID dla tego wiersza -->
                     <td>Zapasy</td>
                     <td>Hala Sportowa, Katowice</td>
                     <td>22 marca</td>
                     <td>12:30</td>
                 </tr>
                 <tr>
+                    <td>9</td> <!-- ID dla tego wiersza -->
                     <td>Łyżwiarstwo figurowe</td>
                     <td>Zimowy Ośrodek Sportowy, Zakopane</td>
                     <td>23 marca</td>
                     <td>16:00</td>
                 </tr>
                 <tr>
+                    <td>10</td> <!-- ID dla tego wiersza -->
                     <td>Wspinaczka</td>
                     <td>Ścianka Wspinaczkowa, Gdynia</td>
                     <td>24 marca</td>
